# free-agent

./: .env.example  .gitignore  LICENSE  README.md  free-agent.example.yaml  pyproject.toml
examples/skills/: README.md
examples/skills/code-review/: SKILL.md
examples/skills/web-research/: SKILL.md
examples/tools/: README.md  calculator.py  file_search.py  http_get.py
src/free_agent/: __main__.py  config.py  workspace.py
src/free_agent/agent/: builder.py  loader.py  ollama_admin.py  ollama_catalog.py  ollama_library.py  profile.py  prompts.py  skills_registry.py
src/free_agent/cli/: app.py  commands.py  console.py  context.py  settings_panel.py  slash_registry.py  wizard.py
src/free_agent/session/: history.py
src/free_agent/tools/: __init__.py  basic.py  registry.py
